--- a/src/main/webapp/pages/credit/usercenter/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_allocation.html
@@ -55,16 +55,111 @@
                            </div>
                            <table id="table"
                                data-toggle="table"
-                               data-url="data.json"
+                               data-url="../data.json"
                                style="position: relative"
                            >
-                            <div class="deal-state"> 
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="defaultCheck1"> 
-                                            <label class="form-check-label" for="defaultCheck1">客户撤销</label>
-                                    </div>
-                                    <a href="javascript:;" role="button" class="enterFilter">确定</a>
+                           <div class="deal-state"> 
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck1"> 
+                                    <label class="form-check-label" for="defaultCheck1">订单分配</label>
                                 </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck2"> 
+                                    <label class="form-check-label" for="defaultCheck2">客户确认</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck3"> 
+                                    <label class="form-check-label" for="defaultCheck3">报告制作</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck4"> 
+                                    <label class="form-check-label" for="defaultCheck4">报告完成</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck5"> 
+                                    <label class="form-check-label" for="defaultCheck5">代理中</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck6"> 
+                                    <label class="form-check-label" for="defaultCheck6">代理完成</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck7"> 
+                                    <label class="form-check-label" for="defaultCheck7">代理补充</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck8"> 
+                                    <label class="form-check-label" for="defaultCheck8">报告质检中</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck9"> 
+                                    <label class="form-check-label" for="defaultCheck9">报告质检不通过</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck10"> 
+                                    <label class="form-check-label" for="defaultCheck10">报告质检合格</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck11"> 
+                                    <label class="form-check-label" for="defaultCheck11">分析制作</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck12"> 
+                                    <label class="form-check-label" for="defaultCheck12">分析完成</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck13"> 
+                                    <label class="form-check-label" for="defaultCheck13">分析质检中</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck14"> 
+                                    <label class="form-check-label" for="defaultCheck14">分析质检不通过</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck15"> 
+                                    <label class="form-check-label" for="defaultCheck15">分析质检合格</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck16"> 
+                                    <label class="form-check-label" for="defaultCheck16">翻译制作</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck17"> 
+                                    <label class="form-check-label" for="defaultCheck17">翻译完成</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck18"> 
+                                    <label class="form-check-label" for="defaultCheck18">翻译质检中</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck19"> 
+                                    <label class="form-check-label" for="defaultCheck19">翻译质检不通过</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck20"> 
+                                    <label class="form-check-label" for="defaultCheck20">翻译质检合格</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck21"> 
+                                    <label class="form-check-label" for="defaultCheck21">报告完成</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck22"> 
+                                    <label class="form-check-label" for="defaultCheck22">客户内容已更新</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck23"> 
+                                    <label class="form-check-label" for="defaultCheck23">客户撤销</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="defaultCheck24"> 
+                                    <label class="form-check-label" for="defaultCheck24">订单完成</label>
+                                </div>
+                                <div class="btn-group btn-filter d-flex justify-content-center mt-4">
+                                    <a href="javascript:;" role="button" class="enterFilter mr-4">确定</a>
+                                    <a href="javascript:;" role="button" class="resetrFilter">重置</a>
+                                </div>
+                            </div>
                            </table>
                        </div>
                    </div>
@@ -92,7 +187,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>客户用户名：</span>
-                                    <span>王彩军</span>
+                                    <span>row</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>接单日期：</span>
@@ -145,8 +240,9 @@
                         <div class="order-form">
                             <div class="input-group align-items-center">
                                 <label class="control-label col-md-1">报告员：</label>
-                                <select name="" id="reporter_select" class="form-control  col-md-3">
-                                    <option value="1"></option>
+                                <select name="model.report_user" id="reporter_select" class="form-control  col-md-3">
+                                    <option value="-1">--请选择--</option>
+                                    ${reportUser!}
                                 </select>
                             </div>
                             <div class="input-group mt-3">
