静态页面的提交

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_allocation.html
@@ -172,7 +172,7 @@
                     <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">
                         <span>订单号：</span>
-                        <span>0001288784932</span>
+                        <span id="num">0001288784932</span>
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
