--- a/src/main/webapp/pages/credit/orderpoimanager/orderpoi_list.html
+++ b/src/main/webapp/pages/credit/orderpoimanager/orderpoi_list.html
@@ -99,51 +99,6 @@ var bodyContent = {
 	<% include("/pages/template/menu.html"){} %>
 
 	<div class="tableSearch">
-		<%  //查询列表 %>
-		<!-- <div class="form-group">
-			<input class="form-control" type="text" name="attr.id" value="${attr.id!''}"
-				   placeholder="请输入订单编号" required='required' />
-		</div>
-		 <div class="form-group">
-             <input  name="attr.company_by_report" type="text" class="form-control"
-              placeholder="请输入公司名称" required='required' />
-         </div>
-		<div class="form-group">
-             <input  name="attr.right_company_name_en" type="text" class="form-control" 
-              placeholder="请输入订单公司名称" required='required' />
-   		</div>
-   		 <div class="form-group" >
-	           <select  name="attr.custom_id" class="form-control">
-	               <option value="" disabled selected>请选择客户</option>
-	           </select>
-	      </div>
-	       <div class="form-group">
-	            <select  name="attr.continent" class="form-control" onchange="getCountry2()">
-	                <option value="" disabled selected>请选择地区</option>
-	            </select>
-	        </div>
-	        <div class="form-group">
-                <select name="attr.country" class="form-control" >
-                    <option value="" disabled selected>请选择国家</option>
-                </select>
-        	</div>
-		<button type="button" class="btn btn-default" onclick="oper.list();" name="search">
-			<span class="glyphicon glyphicon-search"></span> 查 询
-		</button>
-		<button type="button" class="btn btn-default" onclick="resetForm();">
-			<span class="glyphicon glyphicon-refresh"></span> 重 置
-		</button>
-		<button type="button" class="btn btn-default" onclick="oper.add();">
-			<span class="glyphicon glyphicon-plus"></span> 新 增
-		</button>
-	</div>
- -->
- <div class="table-content p-3">
-		    		<form id="orderForm" class="form-inline" action="/credit/front/home/saveOrder" method="">
-		    			<div class="form-group row d-flex justify-content-end mb-4">
-		                    <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4">
-		                    	<button type="button" id="btn_download" class="btn btn-primary"><i class="fa fa-download"></i>批量导入</button>
-		    				</div>
 	<!-- 数据列表 -->
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
@@ -201,9 +156,12 @@ var bodyContent = {
 			<td>${item.company_en}</td>
 			 -->
 			<td>
-				<a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.view(${item.id});">提交</a>
-				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">取消</a>
-				
+<div style="height: 50px;clear: both;">&nbsp;</div>
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+	  <div class="container" style="padding: 5px 0px 5px 0px;text-align: center;">
+	  		<button class="btn btn-primary save" onclick="oper.save(${model.id!'0'});return false;">提交</button>
+			<button class="btn btn-default" onclick="closeIframe();return false;">取消</button>
+	  </div>
 			</td>
 		</tr>
 		<% } %>
