爬取工具类，优化

--- a/src/main/webapp/pages/credit/custom/custom_edit.html
+++ b/src/main/webapp/pages/credit/custom/custom_edit.html
@@ -121,7 +121,7 @@ var bodyContent = {
 					</td>
 					<td>国家</td>
 					<td>
-					<select name="country" class="form-control" >
+					<select name="model.country" class="form-control" >
 					${country!}
 					</select>
 					</td>
