--- a/src/main/webapp/pages/credit/custom/custom_list.html
+++ b/src/main/webapp/pages/credit/custom/custom_list.html
@@ -96,7 +96,7 @@ var bodyContent = {
 					<th name="t.telphone" class="sorting">电话</th> 
 					<th name="t.email" class="sorting">邮箱</th> 
 					<th name="t.fax" class="sorting">传真</th>
-					<th name="t5.name" class="sorting">所属国家</th>  
+					<th name="t5.name" class="sorting">所属国家(地区)</th>  
 					<th name="t.usabled" class="sorting">是否可用</th> 
 					<th name="t.is_old_customer" class="sorting">是否为老用户</th> 
  					<th>操作</th>
