--- a/src/main/webapp/pages/credit/whilte/whilte_view.html
+++ b/src/main/webapp/pages/credit/whilte/whilte_view.html
@@ -20,7 +20,7 @@ var bodyContent = {
 			</tr>
 			<tr>
 				<td>是否在用</td>
-				<td>${item.used}</td>
+				<td>${item.detail_name}</td>
 			</tr>
 			<tr>
 				<td>创建时间</td>
