--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -45,7 +45,7 @@
                        <div class="bg-f pt-4">
                            <table id="table"
                                data-toggle="table"
-                               data-url="../data.json"
+                               data-url=""
                                style="position: relative"
                            >
                                  <div class="deal-state"> 
