--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_verify.css">
+    <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
 </head>
     
         <div id="container" class="row  animated fadeIn">
@@ -147,7 +148,7 @@
                 <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">
                     <span>订单号：</span>
-                    <span>0001288784932</span>
+                    <span id="num">0001288784932</span>
                 </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -166,13 +167,13 @@
                                 </div>
                                 <div class="col-md-4">
                                     <span>接单日期：</span>
-                                    <span id="customId">2018-09-10</span>
+                                    <span id="receiver_date">2018-09-10</span>
                                 </div>
                             </div>
                             <div class="row mt-2 mb-2" id="div2">
                                 <div class="col-md-4">
                                     <span>地区：</span>
-                                    <span id="receiver_date">亚洲</span>
+                                    <span id="continent">亚洲</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>国家：</span>
@@ -210,7 +211,6 @@
                                     <span>公司中文名称：</span>
                                     <span id="companyZHNames">北京小米科技有限公司</span>
                                 </div>
-                                <input type="hidden" name="orderId" id="orderId">
                             </div>
                         <div class="row mt-2 mb-2">
                             <div class="col-md-12 d-flex">
@@ -247,7 +247,7 @@
 	                            </div>
                         <label class="mt-3 ml-3">上传附件：</label>
                         <div class="uploadFile mt-3 mr-4 mb-5">
-                            <input type="file" name="" id="upload_file" value="" class="file-input" />
+                            <input type="file" name="Files_0" id="upload_file" value="" class="file-input" />
                             <div class="over-box"> 
                                 <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABxSURBVGhD7c9BCsAwCABB//82/9RcPJRibg1rYAe8BCRuSDojM5/31PM9DKAZQDOAZgDNAJoBNANoBtCwgO/H06bO3OuWJk2dudctTZo6c69bmjR15nnYx38xgGYAzQCaATQDaAbQDKAZQLs+QLpCxAKykAXNUf4CGwAAAABJRU5ErkJggg==">
                                 <p class="mt-2">上传附件</p>
@@ -256,13 +256,14 @@
                     </div>
                     <input  name="model.id" id="orderId" type="hidden" value="">
 	                <input  name="searchType"  type="hidden" value="-3">
-                  	</form>
+	                <input  name="statusCode" id="status"  type="hidden" value="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" id="modal_submit">提交</button>
                     <button type="button" class="btn btn-default" id="modal_save">保存</button>
                     <button type="button" class="btn btn-default" id="modal_cancel">取消订单</button>
                 </div>
+                </form>
             </div>
             </div>
         </div>
