前端问题的

--- a/src/main/webapp/pages/credit/usercenter/menu.html
+++ b/src/main/webapp/pages/credit/usercenter/menu.html
@@ -55,7 +55,7 @@
                             </li>
                             <li class="">
                                 <a class="menu1" href="#">
-                                    <img src="../imgs/index/icons8-allm.png" alt="" class="menu-icon">
+                                    <img src="${BASE_PATH }static/credit/imgs/index/icons8-allm.png" alt="" class="menu-icon">
                                     <span>全部订单</span>   
                                 </a>
                             </li>
@@ -73,7 +73,7 @@
                             </li>
                             <li class="hasChild">
                                 <a class="menu1" href="#">
-                                    <img src="../imgs/index/icons8-report.png" alt="" class="menu-icon">
+                                    <img src="${BASE_PATH }static/credit/imgs/index/icons8-report.png" alt="" class="menu-icon">
                                     <span>报告管理</span> 
                                 </a>
                                 <ul style="display: none;">
