最新js稳定版

--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -43,24 +43,24 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>客户ID：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_ID">
+		                        <select class="form-control  formSelect col-md-8" id="client_ID">
 		                            <option value="0" disabled selected>请输入客户ID</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请输入客户ID</p>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">客户用户名：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_userNname" placeholder="请输入客户用户名">
+		                        <input type="text" class="form-control  col-md-8" id="client_userNname" placeholder="请输入客户用户名">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>接单日期：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_order_date" disabled>
+		                        <input type="text" class="form-control  col-md-8" id="client_order_date" disabled>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>地区：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_area">
+		                        <select class="form-control  formSelect col-md-8" id="client_area">
 		                            <option value="0" disabled selected>请选择地区</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择地区</p>
@@ -69,14 +69,14 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>国家：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_country">
+		                        <select class="form-control  formSelect col-md-8" id="client_country">
 		                            <option value="0" disabled selected>请选择国家</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择国家</p>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>报告类型：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_reportType">
+		                        <select class="form-control  formSelect col-md-8" id="client_reportType">
 		                            <option value="0" disabled selected>请选择报告类型</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择报告类型</p>
@@ -85,14 +85,14 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>订单类型：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_orderType">
+		                        <select class="form-control  formSelect col-md-8" id="client_orderType">
 		                            <option value="0" disabled selected>请选择订单类型</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择订单类型</p>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>报告语言：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_reportLanguage">
+		                        <select class="form-control  formSelect col-md-8" id="client_reportLanguage">
 		                            <option value="0" disabled selected>请选择报告语言</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择报告语言</p>
@@ -101,12 +101,12 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>公司名称：</label>
-		                        <input type="text" class="form-control search-input formInput col-md-8" id="client_departmentName" placeholder="请输入公司名称">
+		                        <input type="text" class="form-control  formInput col-md-8" id="client_departmentName" placeholder="请输入公司名称">
 		                    	<p class="errorInfo col-md-8">请输入公司名称</p>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for=""><span>*</span>速度：</label>
-		                        <select class="form-control search-input formSelect col-md-8" id="client_speed">
+		                        <select class="form-control  formSelect col-md-8" id="client_speed">
 		                            <option value="0" disabled selected>请选择速度</option>
 		                        </select>
 		                    	<p class="errorInfo col-md-8">请选择速度</p>
@@ -115,37 +115,37 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">报告用时：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_reportTime" disabled>
+		                        <input type="text" class="form-control  col-md-8" id="client_reportTime" disabled>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">客户参考号：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_referenceNumber" placeholder="请输入客户参考号">
+		                        <input type="text" class="form-control  col-md-8" id="client_referenceNumber" placeholder="请输入客户参考号">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">地址：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_address" placeholder="请输入地址">
+		                        <input type="text" class="form-control  col-md-8" id="client_address" placeholder="请输入地址">
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">电话：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_telephone" placeholder="请输入电话">
+		                        <input type="text" class="form-control  col-md-8" id="client_telephone" placeholder="请输入电话">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">传真：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_fax" placeholder="请输入传真">
+		                        <input type="text" class="form-control  col-md-8" id="client_fax" placeholder="请输入传真">
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">联系人：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_contact" placeholder="请输入联系人">
+		                        <input type="text" class="form-control  col-md-8" id="client_contact" placeholder="请输入联系人">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">Email：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_email" onblur="Events.emailAdd(this)" placeholder="请输入邮箱地址">
+		                        <input type="text" class="form-control  col-md-8" id="client_email" onblur="Events.emailAdd(this)" placeholder="请输入邮箱地址">
 		                    	<p class="errorInfo col-md-8">请输入正确格式</p>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
@@ -172,7 +172,7 @@
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4 remarkLabel" for="">备注：</label>
-		                        <textarea class="form-control search-input remark col-md-8" name="" rows="" cols="" placeholder="请输入其他细节"></textarea>
+		                        <textarea class="form-control  remark col-md-8" name="" rows="" cols="" placeholder="请输入其他细节"></textarea>
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                    </div>
