--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" type="text/css" media="screen" href="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/animate/animate.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/layui/css/layui.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table.min.css">
@@ -32,9 +33,13 @@
                     <i class="fa fa-bell-o"></i>
                 </div>
                 <div class="user-content d-flex align-items-center justify-content-start">
-                    <i class="fa fa-user"></i>
+                    <i class="fa fa-user-o"></i>
                     <span>${user.realname}</span>
                 </div>
+                <div class="logout animated fadeInDown">
+                        <div class="popover-arrow"></div>
+                        <i class="fa fa-power-off"></i>注销登录
+                 </div>
             </div>
         </div>         
        </header> 
@@ -64,7 +69,7 @@
 		  		<%} if(item.name=="报告管理"){%>
 		  		<li id="${item.urlkey}" role="presentation" class="hasChild">
 				    <a class="menu1"  href="#" role="button" >
-				    	<i class="fa fa-leaf fa-fw"></i>
+				    	<img src="${BASE_PATH }static/credit/imgs/index/icons8-report.png" alt="" class="menu-icon">
 				     	<span > ${item.name}</span>
 				    </a>
 				    <ul style="display: none;" role="menu">
@@ -120,7 +125,7 @@
 					<li class="active" id="${item.urlkey}"><a class="menu1" href="${item.url}"><i class="fa fa-home fa-fw"></i>${item.name}</a></li>
 				<%}%>
 				<% if(item.name=="全部订单"){%>
-					<li id="${item.urlkey}"><a class="menu1" href="${item.url}"> <img src="../imgs/index/icons8-allm.png" alt="" class="menu-icon">${item.name}</a></li>
+					<li id="${item.urlkey}"><a class="menu1" href="${item.url}"> <img src="${BASE_PATH }static/credit/imgs/index/icons8-allm.png" alt="" class="menu-icon">${item.name}</a></li>
 				<%}%>
 			<% } %>
 		<% } %>
