--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -7,6 +7,9 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
+     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/layui/css/layui.css">
+      <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/index.css">
 
 
@@ -211,7 +214,7 @@
             </div>
 
         </div>
-    
+       <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
    <script src="${BASE_PATH }static/credit/js/index.js"></script>
    <script type="text/javascript">
 		$(function(){
