--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -31,15 +31,15 @@
                     <div class="order-info d-flex justify-content-center align-items-center ">
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
                             <span>核实中订单</span>
-                            <span>24</span>
+                            <span id="orderhs">24</span>
                         </div>
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
                             <span>查档中订单</span>
-                            <span>89</span>
+                            <span id="ordercd">89</span>
                         </div>
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
-                            <span>质检中订单</span>
-                            <span>12</span>
+                            <span >质检中订单</span>
+                            <span id="orderzj">12</span>
                         </div>
                     </div>
                 </div>
@@ -86,9 +86,9 @@
                                 </div>
                             </form>
                             <div class="btn-row d-flex justify-content-between mt-4 mb-4">
-                                <a role="button" class="btn btn-primary ml-5 d-flex align-items-center" href="javascript:;"><i class="fa fa-plus pr-2"></i>新增订单</a>
+                                <a role="button" class="btn btn-primary ml-5 d-flex align-items-center" href="javascript:;" onclick="Public.createOrder()"><i class="fa fa-plus pr-2"></i>新增订单</a>
                                 <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4">
-                                    <button type="button" id="btn_query" class="btn btn-primary">查询</button>
+                                    <button type="button" id="btn_query" class="btn btn-primary enterFilter">查询</button>
                                     <button type="button" id="btn_reset" class="btn btn-light">重置</button>
                                     <a  id="hideBtn" href="javascript:;">收起 <i class="fa fa-angle-up"></i></a>
                                 </div>
@@ -214,14 +214,17 @@
             </div>
 
         </div>
-       <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
    <script src="${BASE_PATH }static/credit/js/index.js"></script>
    <script type="text/javascript">
+   console.log(Public)
 		$(function(){
 			$.get('/credit/front/home/getMessage',function(data){
 				$("#name").html(data.user.realname);
 				$("#role").html(data.user.roleName);
 				$("#dept").text(data.user.departName);
+				$("#orderhs").text(data.orderhs);
+				$("#ordercd").text(data.ordercd);
+				$("#orderzj").text(data.orderzj);
 				getCustoms(data.customs);
 				getCountry(data.country);
 			})	
@@ -250,7 +253,26 @@
 		
 		}
 		function orderinfo(id){
-			location.href="/credit/front/home/orderInfo?id="+id
+			Public.goToOrderDetail(id)
+		}
+		function getMessage(){
+			$.ajax({
+				type:"post",
+				url:"/credit/front/home/getMessage",
+				data:{"attr.custom_id":$("#custom_id").find("option:selected").val(),
+					"attr.continent":$("#continent").find("option:selected").val(),
+					"attr.country":$("#country").find("option:selected").val(),
+					"attr.end_date":$("#dead_date").val(),
+					"attr.company_by_report":$("#txt_search_departmentname").val(),
+					"attr.right_company_name_en":$("#txt_search_companyEngName").val()
+					},
+				 dataType:"json",
+				 success:function(data){
+				 	$("#orderhs").text(data.orderhs);
+					$("#ordercd").text(data.ordercd);
+					$("#orderzj").text(data.orderzj);
+				 }
+			});
 		}
 		
 		
