公共返回方法 前台提示

--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -203,6 +203,23 @@
        </div>
         <div class="col-md-10" id="main_content"></div>
    </div> 
+   <!-- 返回顶部 -->
+        <div class="fixed-backup">
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+        </div>
+        <!-- 全局提示 -->
+        <div class="info-tip all-tip animated slideInDown faster">
+        	<img src="${BASE_PATH }static/credit/imgs/index/info.png"/>
+            <span class="info-text">获取数据失败</span>
+        </div>
+        <div class="success-tip all-tip animated slideInDown faster">
+            <img src="${BASE_PATH }static/credit/imgs/index/success.png"/>
+            <span class="success-text">获取数据失败</span>
+        </div>
+        <div class="error-tip all-tip animated slideInDown faster">
+            <img src="${BASE_PATH }static/credit/imgs/index/error.png"/>
+            <span class="error-text">获取数据失败</span>
+        </div>
 </div>        
        
 	<script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
