--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_filing.css">
+    <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
 </head>
 
         <div id="container" class="row  animated fadeIn">
@@ -146,8 +147,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">
-                    <span>订单号：</span>
-                    <span>0001288784932</span>
+                   <span>订单号：</span>
+                    <span id="num">0001288784932</span>
                 </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -155,66 +156,67 @@
                 </div>
                 <div class="modal-body">
                     <div class="order-detail mb-5">
-                        <div class="row mt-3 mb-3">
-                            <div class="col-md-4">
-                                <span>客户ID：</span>
-                                <span>001354574</span>
+                        <div class="row mt-2 mb-2" id="div1"> 
+                                <div class="col-md-4">
+                                    <span>客户ID：</span>
+                                    <span id="custom_id">001354574</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>客户用户名：</span>
+                                    <span id="customId">row</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>接单日期：</span>
+                                    <span id="receiver_date">2018-09-10</span>
+                                </div>
                             </div>
-                            <div class="col-md-4">
-                                <span>客户用户名：</span>
-                                <span>王彩军</span>
+                            <div class="row mt-2 mb-2" id="div2">
+                                <div class="col-md-4">
+                                    <span>地区：</span>
+                                    <span id="continent">亚洲</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>国家：</span>
+                                    <span id="country">中国</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>报告类型：</span>
+                                    <span id="reportType">基本信用报告</span>
+                                </div>
                             </div>
-                            <div class="col-md-4">
-                                <span>接单日期：</span>
-                                <span>2018-09-10</span>
+                            <div class="row mt-2 mb-2" id="div3">
+                                <div class="col-md-4">
+                                    <span>订单类型：</span>
+                                    <span id="orderType">new</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>报告语言：</span>
+                                    <span id="reportLanguage">中文</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>订单公司名称：</span>
+                                    <span id="companyNames">北京小米科技有限公司</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row mt-3 mb-3">
-                            <div class="col-md-4">
-                                <span>地区：</span>
-                                <span>亚洲</span>
+                            <div class="row mt-2 mb-2" id="div4">
+                                <div class="col-md-4">
+                                    <span>报告速度</span>
+                                    <span id="speed">普通</span>
+                                </div>
+                                <div class="col-md-4">
+                                    <span>报告用时：</span>
+                                    <span id="user_time">5天</span>小时
+                                </div>
+                                <div class="col-md-4">
+                                    <span>公司中文名称：</span>
+                                    <span id="companyZHNames">北京小米科技有限公司</span>
+                                </div>
                             </div>
-                            <div class="col-md-4">
-                                <span>国家：</span>
-                                <span>中国</span>
-                            </div>
-                            <div class="col-md-4">
-                                <span>报告类型：</span>
-                                <span>基本信用报告</span>
-                            </div>
-                        </div>
-                        <div class="row mt-3 mb-3">
-                            <div class="col-md-4">
-                                <span>订单类型：</span>
-                                <span>new</span>
-                            </div>
-                            <div class="col-md-4">
-                                <span>报告语言：</span>
-                                <span>中文</span>
-                            </div>
-                            <div class="col-md-4">
-                                <span>订单公司名称：</span>
-                                <span>北京小米科技有限公司</span>
-                            </div>
-                        </div>
-                        <div class="row mt-3 mb-3">
-                            <div class="col-md-4">
-                                <span>报告速度：</span>
-                                <span>普通</span>
-                            </div>
-                            <div class="col-md-4">
-                                <span>报告用时：</span>
-                                <span>5天</span>
-                            </div>
-                            <div class="col-md-4">
-                                <span>公司中文名称：</span>
-                                <span>北京小米科技有限公司</span>
-                            </div>
-                        </div>
                     </div>
+                 <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
                     <div class="file-upload pl-5">
                         <div class="uploadFile mt-3 mr-4">
-                            <input type="file" name="" id="upload_file" value="" class="file-input" />
+                            <input type="file" name="Files_1" id="upload_file" value="" class="file-input" />
                             <div class="over-box"> 
                                 <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABxSURBVGhD7c9BCsAwCABB//82/9RcPJRibg1rYAe8BCRuSDojM5/31PM9DKAZQDOAZgDNAJoBNANoBtCwgO/H06bO3OuWJk2dudctTZo6c69bmjR15nnYx38xgGYAzQCaATQDaAbQDKAZQLs+QLpCxAKykAXNUf4CGwAAAABJRU5ErkJggg==">
                                 <p class="mt-2">上传附件</p>
@@ -222,10 +224,13 @@
                         </div>
                         
                     </div>
+                 <input  name="statusCode" id="status"  type="hidden" value="">
+              	 <input  name="model.id" id="orderId"  type="hidden" value="">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modal_submit">提交</button>
-                </div>
+                    <input type="button" class="btn btn-primary" id="modal_submit" value="提交"/>
+                 </div>
+                 </form>
             </div>
             </div>
         </div>
