批量订单初步完成

--- a/src/main/webapp/pages/credit/usercenter/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/create_order.html
@@ -212,7 +212,7 @@
 						</table>
 					</div>
 					<div class="err-box">
-						<span>1.拼写错误拼写错误拼写错误拼写错误</span>
+						<span></span>
 					</div>	
 						
 					
