--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -122,7 +122,7 @@
 		  		
 			<% } else { %>
 				<% if(item.name=="工作台"){%>
-					<li class="active" id="${item.urlkey}"><a class="menu1" href="${item.url}"><i class="fa fa-home fa-fw"></i>${item.name}</a></li>
+					<li class="" id="${item.urlkey}"><a class="menu1" href="${item.url}"><i class="fa fa-home fa-fw"></i>${item.name}</a></li>
 				<%}%>
 				<% if(item.name=="全部订单"){%>
 					<li id="${item.urlkey}"><a class="menu1" href="${item.url}"> <img src="${BASE_PATH }static/credit/imgs/index/icons8-allm.png" alt="" class="menu-icon">${item.name}</a></li>
@@ -209,15 +209,15 @@
         </div>
         <!-- 全局提示 -->
         <div class="info-tip all-tip animated slideInDown faster">
-        	<img src="${BASE_PATH }static/credit/imgs/index/info.png"/>
+        	<img src="../imgs/index/info.png"/>
             <span class="info-text">获取数据失败</span>
         </div>
         <div class="success-tip all-tip animated slideInDown faster">
-            <img src="${BASE_PATH }static/credit/imgs/index/success.png"/>
+            <img src="../imgs/index/success.png"/>
             <span class="success-text">获取数据失败</span>
         </div>
         <div class="error-tip all-tip animated slideInDown faster">
-            <img src="${BASE_PATH }static/credit/imgs/index/error.png"/>
+            <img src="../imgs/index/error.png"/>
             <span class="error-text">获取数据失败</span>
         </div>
 </div>        
